tests/fixtures/invalid/anonymous_aggregate_pointer_to_pointer_declaration.c
int main(void) { struct { int x; } **slot; return 0; }
